# simple-chatpdf

./: README.md  pyproject.toml  requirements.txt
chroma_db/: chroma.sqlite3
notebooks/: rag_app.ipynb
src/app/: fastapi.py  streamlit_app.py
src/rag/: indexing.py  retrieve_generation.py
