[project]
name = "simple-chatpdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain[google-genai]>=0.3.27",
    "langchain-community>=0.3.30",
    "langchain-text-splitters>=0.3.11",
    "langchain-huggingface>=0.3.1",
    "langchain-chroma>=0.2.6",
    "ipykernel>=6.30.1",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.1",
    "beautifulsoup4>=4.14.2",
    "pypdf>=6.1.1",
    "langgraph>=0.6.8",
    "streamlit>=1.50.0",
    "fastapi>=0.118.0",
    "uvicorn>=0.37.0",
    "requests>=2.32.5",
    "uuid>=1.30",
    "python-multipart>=0.0.20",
]
